# Munajjam

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  PSEUDO CODE.md  QUICK_START.md  README.md  ROADMAP.md  WORD_CHECK_ANALYSIS.md  article.md  article1.md  batch_process.py  benchmark_comparison.py  benchmark_rust.py  benchmark_surah001.py  check_missing.py  debug_alignment.py  main.py  model_config.json  player.py  process_surah.py  pytest.ini  reprocess_failed.py  requirements.txt  run_player.sh  setup_and_install.ps1  test-requirements.txt  test_alignment_002.py  test_dp_aligner.py  test_dp_surah002.py  test_installation.py
data/: current_config.json  quran.db
data/corrected_segments/: corrected_segments_067.json
data/segments/: 067_segments.json  67_segments.json
data/silences/: 067_silences.json
docs/: ALIGNMENT_DEEP_DIVE.md
examples/: 01_basic_usage.py  02_comparing_strategies.py  03_advanced_configuration.py  04_batch_processing.py
munajjam/: README.md  pyproject.toml
munajjam-rs/: Cargo.toml  pyproject.toml
munajjam-rs/src/: arabic.rs  dp_core.rs  lib.rs  similarity.rs
munajjam/examples/: basic_usage.py  output_surah_001.json  test_alignment.py
munajjam/munajjam/: __init__.py  _logging.py  config.py  exceptions.py
scripts/: align_batch_cli.py  close_all_issues.sh  create_github_issues.sh  delete_all_issues.sh  download.py  to_wav.py
src/: align_segments.py  transcribe.py
tests/integration/: test_real_data.py
tests/unit/: test_aligner.py  test_zone_realigner.py
v2/: test_surah_compare.py
(+22 files in other folders)
